force-app/main/default/objects/NCSP_Services__c/NCSP_Services__c.object-meta.xml
<CustomObject>
    <description>Object to hold NCSP services, similar to standard product object. Gitlab 23515</description>
    <label>NCSP Service</label>
    <nameField>
        <label>Bill Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NCSP Services</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>