force-app/main/default/objects/NCSP_Services__c/fields/Bill_Code__c.field-meta.xml
<CustomField>
    <fullName>Bill_Code__c</fullName>
    <description>Created as part of NCSP optimization project to store NCSP Service data. #Gitlab 23515</description>
    <label>Bill Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>