force-app/main/default/objects/NCSP_Services__c/fields/Exception_Rate__c.field-meta.xml
<CustomField>
    <fullName>Exception_Rate__c</fullName>
    <description>Created as part of NCSP optimization project to store NCSP Service data. #Gitlab 23515</description>
    <label>Exception Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>