force-app/main/default/objects/NCSP_Services__c/fields/Is_Minimum__c.field-meta.xml
<CustomField>
    <fullName>Is_Minimum__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Git lab 24442, this is a back end field to identify the services that used to calculate NCSP schedule A minimums form line items - Bill codes are ((&apos;3477&apos;,&apos;3476&apos;,&apos;2476&apos;,&apos;2477&apos;,&apos;2479&apos;,&apos;3475&apos;))</description>
    <label>Is Minimum</label>
    <type>Checkbox</type>
</CustomField>