force-app/main/default/objects/NCSP_Services__c/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <description>Created as part of NCSP optimization project to store NCSP Service data. #Gitlab 23515</description>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>RM</fullName>
            </value>
            <value>
                <fullName>Shred</fullName>
            </value>
            <value>
                <fullName>Recurring Shred for IM45</fullName>
            </value>
            <value>
                <fullName>One Time Shred</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>