force-app/main/default/objects/NCSP_Services__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Effective_Date__c</columns>
    <columns>Service_Type__c</columns>
    <columns>UOM__c</columns>
    <columns>Exception_Rate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>